--- a/report/src/main/resources/templates/index.html
+++ b/report/src/main/resources/templates/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lambent Login Form a Flat Responsive Widget Template :: w3layouts</title>
-	<link rel="stylesheet" href="css/login_css/login_style.css">
+	<title>灵活报表系统登陆</title>
+	<link rel="stylesheet" href="/css/login_css/login_style.css">
 	
 <!--	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>-->
@@ -18,8 +18,8 @@
 	<div class="main-agileinfo">
 		<h2>现在登录</h2>
 		<form action="/ProjectManagement_Contest/user_login.action" method="post">
-			<input type="text" name="user_account" value="">
-			<input type="password" name="user_password" value="">
+			<input type="text" name="emp_id" value="">
+			<input type="password" name="password" value="">
 			<ul>
 				<li>
 					<input type="checkbox" id="brand1" value="">
