--- a/report/src/main/resources/templates/css/login_css/login_style.css
+++ b/report/src/main/resources/templates/css/login_css/login_style.css
@@ -29,7 +29,7 @@
 	img{max-width:100%;}
 /*-- //Reset-Code --*/
 body {
-	background:url('/images/login_images/bg.jpg') no-repeat 0px 0px;
+	background:url('/wz/images/login_images/bg.jpg') no-repeat 0px 0px;
 	background-size: cover;
 	font-family: 'Open Sans', sans-serif;
 	background-attachment: fixed;
@@ -66,10 +66,10 @@ input[type="text"],input[type="password"]{
 	outline:none;
 	font-size:14px;
 	margin-bottom:20px;
-	background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 412px 11px;
+	background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 412px 11px;
 }
 input[type="password"]{
-	background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 412px 11px;
+	background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 412px 11px;
 }
 form ul {
 	float: left;
@@ -102,7 +102,7 @@ ul li input[type="checkbox"]+label span:first-child {
 }
 ul li input[type="checkbox"]:checked+label span:first-child:before {
 	content: "";
-	background: url(/images/login_images/tick.png)no-repeat;
+	background: url(/wz/images/login_images/tick.png)no-repeat;
 	position: absolute;
 	left: 2px;
 	top: 2px;
@@ -154,19 +154,19 @@ input[type="submit"]:hover{
 @media(max-width:1440px){
 	input[type="text"], input[type="password"] {
 		width: 86.5%;
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 370px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 370px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 370px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 370px 11px;
 	}
 }
 @media(max-width:1366px){
 	input[type="text"], input[type="password"] {
 		width: 85.5%;
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 350px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 350px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 350px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 350px 11px;
 	}
 }
 @media(max-width:1280px){
@@ -174,10 +174,10 @@ input[type="submit"]:hover{
 		width: 30%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 349px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 349px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 349px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 349px 11px;
 	}
 }
 @media(max-width:1080px){
@@ -185,19 +185,19 @@ input[type="submit"]:hover{
 		width: 35%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 345px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 345px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 345px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 345px 11px;
 	}
 }
 @media(max-width:1024px){
 	input[type="text"], input[type="password"] {
 		width: 84.5%;
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 325px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 325px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 325px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 325px 11px;
 	}
 }
 @media(max-width:991px){
@@ -205,10 +205,10 @@ input[type="submit"]:hover{
 		width: 36%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 324px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 324px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 324px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 324px 11px;
 	}
 }
 @media(max-width:966px){
@@ -218,10 +218,10 @@ input[type="submit"]:hover{
 	}
 	input[type="text"], input[type="password"] {
 		width: 84%;
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 313px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 313px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 313px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 313px 11px;
 	}
 }
 @media(max-width:900px){
@@ -229,10 +229,10 @@ input[type="submit"]:hover{
 		width: 38%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 308px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 308px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 308px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 308px 11px;
 	}
 }
 @media(max-width:800px){
@@ -240,10 +240,10 @@ input[type="submit"]:hover{
 		width: 43%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 310px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 310px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 310px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 310px 11px;
 	}
 }
 @media(max-width:768px){
@@ -251,10 +251,10 @@ input[type="submit"]:hover{
 		width: 45%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 313px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 313px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 313px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 313px 11px;
 	}
 }
 @media(max-width:736px){
@@ -262,10 +262,10 @@ input[type="submit"]:hover{
 		width: 47%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 304px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 304px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 304px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 304px 11px;
 	}
 }
 @media(max-width:667px){
@@ -277,10 +277,10 @@ input[type="submit"]:hover{
 		width: 51%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 300px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 300px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 300px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 300px 11px;
 	}
 }
 @media(max-width:640px){
@@ -288,10 +288,10 @@ input[type="submit"]:hover{
 		width: 53%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 304px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 304px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 304px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 304px 11px;
 	}
 }
 @media(max-width:600px){
@@ -303,10 +303,10 @@ input[type="submit"]:hover{
 		margin: 8% auto 10%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 299px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 299px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 299px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 299px 11px;
 	}
 }
 @media(max-width:568px){
@@ -321,10 +321,10 @@ input[type="submit"]:hover{
 		width: 61%;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 303px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 303px 11px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 303px 11px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 303px 11px;
 	}
 }
 @media(max-width:480px){
@@ -355,10 +355,10 @@ input[type="submit"]:hover{
 	input[type="text"], input[type="password"] {
 		padding: 12px 45px 12px 10px;
 		width:80.5%;
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 248px 9px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 248px 9px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 248px 9px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 248px 9px;
 	}
 	input[type="submit"] {
 		padding: 11px 0;
@@ -373,19 +373,19 @@ input[type="submit"]:hover{
 		font-size: 23.5px;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 227px 8px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 227px 8px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 227px 8px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 227px 8px;
 	}
 	
 }
 @media(max-width:375px){
 input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 225px 8px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 225px 8px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 225px 8px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 225px 8px;
 	}
 }
 @media(max-width:320px){
@@ -414,10 +414,10 @@ input[type="text"], input[type="password"] {
 		font-size: 12px;
 	}
 	input[type="text"], input[type="password"] {
-		background: rgb(255, 255, 255) url("/images/login_images/user.png") no-repeat 215px 8px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/user.png") no-repeat 215px 8px;
 	}
 	input[type="password"]{
-		background: rgb(255, 255, 255) url("/images/login_images/password.png") no-repeat 215px 8px;
+		background: rgb(255, 255, 255) url("/wz/images/login_images/password.png") no-repeat 215px 8px;
 	}
 	ul li input[type="checkbox"]:checked+label span:first-child:before {
 		left: 1px;
