登陆前后端合并

--- a/report/src/main/resources/templates/index.html
+++ b/report/src/main/resources/templates/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lambent Login Form a Flat Responsive Widget Template :: w3layouts</title>
-	<link rel="stylesheet" href="css/login_css/login_style.css">
+	<title>灵活报表系统登陆</title>
+	<link rel="stylesheet" href="/css/login_css/login_style.css">
 	
 <!--	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>-->
@@ -12,14 +11,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Lambent Login Form Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+		<script type="application/javascript" src="js/reportJS/login.js"></script>
 </head>
 <body>
 	<h1>灵活报表管理系统</h1>
 	<div class="main-agileinfo">
 		<h2>现在登录</h2>
 		<form action="/ProjectManagement_Contest/user_login.action" method="post">
-			<input type="text" name="user_account" value="">
-			<input type="password" name="user_password" value="">
+			<input type="text" name="emp_id" value="">
+			<input type="password" name="password" value="">
 			<ul>
 				<li>
 					<input type="checkbox" id="brand1" value="">
@@ -33,7 +33,7 @@
 		</form>
 	</div>
 	<div class="footer-w3l">
-		<p class="agile"> &copy; 2019 西安交通大学 软件学院</a></p>
+		<p class="agile"> &copy; 2019 招商银行西安分行</a></p>
 	</div>
 </body>
 </html>
