--- a/report/pom.xml
+++ b/report/pom.xml
@@ -52,6 +52,10 @@
             <version>3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
     </dependencies>
 
