--- a/report/src/main/resources/templates/login.html
+++ b/report/src/main/resources/templates/login.html
@@ -11,15 +11,16 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Lambent Login Form Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-		<script type="application/javascript" src="js/reportJS/login.js"></script>
+	<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+	<script type="application/javascript" src="/js/reportJS/login.js"></script>
 </head>
 <body>
 	<h1>灵活报表管理系统</h1>
 	<div class="main-agileinfo">
 		<h2>现在登录</h2>
-		<form action="/ProjectManagement_Contest/user_login.action" method="post">
-			<input type="text" name="emp_id" value="">
-			<input type="password" name="password" value="">
+		<form id="form1" onsubmit="return false;"  method="post">
+			<input id="username" type="text" name="emp_id" value="">
+			<input id="password" type="password" name="password" value="">
 			<ul>
 				<li>
 					<input type="checkbox" id="brand1" value="">
@@ -29,7 +30,7 @@
             <a href="#">忘记密码?</a><br>
             <a href="/ProjectManagement_Contest/jsp/Register.jsp">注册帐号-</a><br>
 			<div class="clear"></div>
-			<input type="submit" value="Login">
+			<input type="submit" value="Login" id="btn_login">
 		</form>
 	</div>
 	<div class="footer-w3l">
