--- a/report/pom.xml
+++ b/report/pom.xml
@@ -58,6 +58,24 @@
             <version>2.1.6.RELEASE</version>
         </dependency>
 
+        <!--导出excel所需的包-->
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls-reader</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls-poi</artifactId>
+            <version>1.0.14</version>
+        </dependency>
+
 <!--        上传excel所需的包-->
         <dependency>
             <groupId>org.apache.poi</groupId>
