修复拦截器获取当前用户

--- a/report/src/main/resources/templates/login.html
+++ b/report/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 		<meta name="keywords" content="Lambent Login Form Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
-	<script type="application/javascript" src="/js/reportJS/login.js"></script>
+	<script type="application/javascript" src="js/reportJS/login.js"></script>
 </head>
 <body>
 	<h1>灵活报表管理系统</h1>
