--- a/report/pom.xml
+++ b/report/pom.xml
@@ -94,6 +94,14 @@
             <version>1.0.14</version>
         </dependency>
 
+
+        <!-- pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
