--- a/report/src/main/resources/templates/test.html
+++ b/report/src/main/resources/templates/test.html
@@ -6,6 +6,9 @@
     <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
+
+<span th:text="${test}"></span>
+
 <input name="reportId" id="id">
 <input type="button" value="导出" id="export"></input>
 <script>
