--- a/report/pom.xml
+++ b/report/pom.xml
@@ -101,7 +101,10 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.5</version>
         </dependency>
-
+        <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
