注册前后端合并

--- a/report/src/main/resources/static/css/register_css/register_style.css
+++ b/report/src/main/resources/static/css/register_css/register_style.css
@@ -81,7 +81,7 @@ img {
 
 /*--- end reset code ---*/
 body {
-	background:url(/ProjectManagement_Contest/images/register_images/content.jpg) no-repeat;
+	background:url(../../images/register_images/content.jpg) no-repeat;
 	background-position:center;
 	background-attachment:fixed;
 	background-size:100% 100%;
