--- a/report/src/main/resources/templates/login.html
+++ b/report/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 				</li>
 			</ul>
             <a href="#">忘记密码?</a><br>
-            <a href="/test">注册帐号-</a><br>
+            <a href="/regIndex">注册帐号-</a><br>
 			<div class="clear"></div>
 			<input type="submit" value="Login" id="btn_login">
 		</form>
