--- a/report/src/main/resources/templates/leader/C_Top.html
+++ b/report/src/main/resources/templates/leader/C_Top.html
@@ -12,8 +12,7 @@
             <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
                 <ul class="cl">
                     <li class="dropDown dropDown_hover">
-                        <a href="#" class="dropDown_A"><span th:text="${user.name}"><i
-                                class="Hui-iconfont">&#xe6d5;</i></span><i class="Hui-iconfont">&#xe6d5;</i></a>
+                        <a href="#" class="dropDown_A"><span th:text="${user.name}"></span></a>
                     </li>
 
                     <li id="Hui-skin" class="dropDown right dropDown_hover">
@@ -41,7 +40,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">退出</a>
+                        <a href="/logout">退出</a>
                     </li>
                 </ul>
             </nav>
